--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = IR F19 uci-id1,uci-id2,uci-id3
+USERAGENT = IR UW25 nyhuang
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
